--- a/hw01/index.html
+++ b/hw01/index.html
@@ -160,6 +160,14 @@
 
   <!-- ------------------------------------------------>
   <div class="row hw12">
+      <div class="col-md-12 twenty">
+        壓縮檔位置連結：
+        <input type="button" name="back" onclick="location.href='https://github.com/AvaLiya/ct2024s/tree/main/hw02/strong'" value="按我 ٩(｡・ω・｡)و 前往">
+        (p.s 請記得修改網址)
+      </div>
+  </div>
+  <!-- ------------------------------------------------>
+  <div class="row hw12">
     <div class="col-md-12 twenty">
       <table>
         <tr>
@@ -170,22 +178,22 @@
         </tr>
         <tr>
           <td rowspan="4" id="myTotal"></td>
-          <td><input type="checkbox" class="flipswitch" id="myCheckbox1"></td>
+          <td><input type="checkbox" class="flipswitch" id="myCheckbox1"checked></td>
           <td id='m1'>4</td>
           <td>Simple baseline - 描述</td>
         </tr>
         <tr>
-          <td><input type="checkbox" class="flipswitch" id="myCheckbox2"></td>
+          <td><input type="checkbox" class="flipswitch" id="myCheckbox2"checked></td>
           <td id='m2'>4</td>
           <td>Medium baseline - 描述</td>
         </tr>
         <tr>
-          <td><input type="checkbox" class="flipswitch" id="myCheckbox3"></td>
+          <td><input type="checkbox" class="flipswitch" id="myCheckbox3"checked></td>
           <td id='m3'>2</td>
           <td>Strong baseline - 描述</td>
         </tr>
         <tr>
-          <td><input type="checkbox" class="flipswitch" id="myCheckbox4" checked></td>
+          <td><input type="checkbox" class="flipswitch" id="myCheckbox4" ></td>
           <td id='m4'>-10</td>
           <td>沒有寫100字心得</td>
         </tr>
