--- a/hw01/index.html
+++ b/hw01/index.html
@@ -21,7 +21,7 @@
 
   @font-face {
     font-family:'CircleFont';
-    src: url(https://circle472.github.io/ct2022s/hw04/CircleFont_v2.woff2); 
+    src: url(https://github.com/Garvin2009/ai2025s/blob/main/hw01/113598097.woff2); 
   }
 
   table {
