--- a/hw01/index.html
+++ b/hw01/index.html
@@ -20,7 +20,7 @@
   @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100&display=swap');
 
   @font-face {
-    font-family:'CircleFont';
+    font-family:'113598097';
     src: url(https://github.com/Garvin2009/ai2025s/blob/main/hw01/113598097.woff2); 
   }
 
