--- a/hw01/index.html
+++ b/hw01/index.html
@@ -20,8 +20,8 @@
   @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100&display=swap');
 
   @font-face {
-    font-family:'Font_113598097';
-    src: url(https://github.com/Garvin2009/ai2025s/blob/main/hw01/113598097.woff2); 
+    font-family:'CircleFont';
+    src: url(https://circle472.github.io/ct2022s/hw04/CircleFont_v2.woff2); 
   }
 
   table {
