--- a/hw01/index.html
+++ b/hw01/index.html
@@ -162,7 +162,7 @@
   <div class="row hw12">
       <div class="col-md-12 twenty">
         壓縮檔位置連結：
-        <input type="button" name="back" onclick="location.href='https://github.com/AvaLiya/ct2024s/tree/main/hw02/strong'" value="按我 ٩(｡・ω・｡)و 前往">
+        <input type="button" name="back" onclick="location.href='https://github.com/Garvin2009/ai2025s/blob/main/hw01/113598097.zip'" value="按我 ٩(｡・ω・｡)و 前往">
         (p.s 請記得修改網址)
       </div>
   </div>
