--- a/hw01/index.html
+++ b/hw01/index.html
@@ -205,9 +205,8 @@
   <!-- ------------------------------------------------>
   <div class="row hw12 bottomrow">
     <div class="col-md-12 twenty">
-      <video id="video1" style="width:100%;max-width:100%;" controls="">
-        <source src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">
-      </video>
+      <img src="hw01/112598018">
+      </img>
     </div>
   </div>
 
