--- a/hw01/index.html
+++ b/hw01/index.html
@@ -147,7 +147,7 @@
   <!-- ------------------------------------------------>
   <div class="row hw12">
     <div class="col-md-12 twenty">
-      <h1>作業 01</h1>
+      <h1>作業 01-稿紙</h1>
     </div>
   </div>
 
@@ -205,7 +205,7 @@
   <!-- ------------------------------------------------>
   <div class="row hw12 bottomrow">
     <div class="col-md-12 twenty">
-      <img src="hw01/112598018">
+      <img src="112598018.jpg">
       </img>
     </div>
   </div>
