--- a/hw01/index.html
+++ b/hw01/index.html
@@ -205,8 +205,7 @@
   <!-- ------------------------------------------------>
   <div class="row hw12 bottomrow">
     <div class="col-md-12 twenty">
-      <img src="112598018.jpg">
-      </img>
+      <img src="112598018.jpg" width="1200px" height="600px"/>
     </div>
   </div>
 
