--- a/hw02/index.html
+++ b/hw02/index.html
@@ -195,11 +195,15 @@
   </div>
 
   <!-- ------------------------------------------------>
-  <div class="row hw12 bottomrow">
-    <div class="col-md-12 twenty">
-      <video id="video1" style="width:100%;max-width:100%;" controls="">
-        <source src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">
-      </video>
+  <div class="row hw12">
+    <div class="col-md-12 twenty">    
+      <img src="train.png" width="1200px" height="600px"/>
+    </div>
+  </div>
+
+  <div class="row hw12">
+    <div class="col-md-12 twenty">    
+      <img src="infer.png" width="1200px" height="600px"/>      
     </div>
   </div>
 
