--- a/hw01/index.html
+++ b/hw01/index.html
@@ -203,9 +203,9 @@
   </div>
 
   <!-- ------------------------------------------------>
-  <div class="row hw12 bottomrow">
-    <div class="col-md-12 twenty">
-      <img src="https://github.com/Garvin2009/ai2025s/blob/main/hw01/112598018.jpg" width="1200px" height="600px"/>
+  <div class="row hw12">
+    <div class="col-md-12 twenty">    
+      <img src="112598018.jpg" width="1200px" height="600px"/>
     </div>
   </div>
 
