--- a/hw02/index.html
+++ b/hw02/index.html
@@ -157,7 +157,14 @@
       心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。
     </div>
   </div>
-
+   <!-- ------------------------------------------------>
+<div class="row hw12">
+      <div class="col-md-12 twenty">
+        壓縮檔位置連結：
+        <input type="button" name="back" onclick="location.href='https://github.com/Garvin2009/ai2025s/blob/main/hw01/113598097.zip'" value="按我 ٩(｡・ω・｡)و 前往">
+        (p.s 請記得修改網址)
+      </div>
+  </div>
   <!-- ------------------------------------------------>
   <div class="row hw12">
     <div class="col-md-12 twenty">
