--- a/hw01/index.html
+++ b/hw01/index.html
@@ -205,7 +205,7 @@
   <!-- ------------------------------------------------>
   <div class="row hw12">
     <div class="col-md-12 twenty">    
-      <img src="112598018_34-54.jpg" />
+      <img src="112598018_34-54.jpg" width="800px" height="1200px"/>
     </div>
   </div>
 
