--- a/hw02/index.html
+++ b/hw02/index.html
@@ -147,7 +147,7 @@
   <!-- ------------------------------------------------>
   <div class="row hw12">
     <div class="col-md-12 twenty">
-      <h1>作業 02-機器學習</h1>
+      <h1>作業 02-機器生成</h1>
     </div>
   </div>
 
