--- a/hw02/index.html
+++ b/hw02/index.html
@@ -179,12 +179,12 @@
           <td rowspan="4" id="myTotal"></td>
           <td><input type="checkbox" class="flipswitch" id="myCheckbox1"></td>
           <td id='m1'>4</td>
-          <td>Simple baseline - 描述</td>
+          <td>Simple baseline - 完成訓練並截圖上傳證明</td>
         </tr>
         <tr>
           <td><input type="checkbox" class="flipswitch" id="myCheckbox2"></td>
           <td id='m2'>4</td>
-          <td>Medium baseline - 描述</td>
+          <td>Medium baseline - 完成推論並截圖上傳證明</td>
         </tr>
         <tr>
           <td><input type="checkbox" class="flipswitch" id="myCheckbox3"></td>
@@ -204,13 +204,13 @@
   <!-- ------------------------------------------------>
   <div class="row hw12">
     <div class="col-md-12 twenty">    
-      <img src="train.png" width="1200px" height="600px"/>
+      <img src="train.png" height="600px"/>
     </div>
   </div>
 
   <div class="row hw12">
     <div class="col-md-12 twenty">    
-      <img src="infer.png" width="1200px" height="600px"/>      
+      <img src="infer.png" height="600px"/>      
     </div>
   </div>
 
