--- a/hw02/index.html
+++ b/hw02/index.html
@@ -204,7 +204,7 @@
   <!-- ------------------------------------------------>
   <div class="row hw12">
     <div class="col-md-12 twenty">    
-      <img src="train.png" height="600px"/>
+      <img src="train.png" height="100%" width="30%"/>
     </div>
   </div>
 
