--- a/hw02/index.html
+++ b/hw02/index.html
@@ -204,13 +204,13 @@
   <!-- ------------------------------------------------>
   <div class="row hw12">
     <div class="col-md-12 twenty">    
-      <img src="train.png" height="100%" width="30%"/>
+      <img src="train.png" width="200px"/>
     </div>
   </div>
 
   <div class="row hw12">
     <div class="col-md-12 twenty">    
-      <img src="infer.png" height="600px"/>      
+      <img src="infer.png" height="200px"/>      
     </div>
   </div>
 
