--- a/hw01/index.html
+++ b/hw01/index.html
@@ -208,6 +208,11 @@
       <img src="113598097_13-18.jpg" width="800px"/>
     </div>
   </div>
+  <div class="row hw12">
+    <div class="col-md-12 twenty">    
+      <img src="113598097_13-18.jpg" width="800px"/>
+    </div>
+  </div>
 
   <!-- ------------------------------------------------>
   <!-- ------------------------------------------------>
