--- a/hw01/index.html
+++ b/hw01/index.html
@@ -205,12 +205,18 @@
   <!-- ------------------------------------------------>
   <div class="row hw12">
     <div class="col-md-12 twenty">    
-      <img src="113598097_13-18.jpg" width="800px"/>
+          <figure>
+            <img src="113598097_13-18.jpg" width="800px"/>
+          <figcaption>稿紙第30頁</figcaption>
+        </figure>
     </div>
   </div>
   <div class="row hw12">
     <div class="col-md-12 twenty">    
-      <img src="113598097_13-18.jpg" width="800px"/>
+      <figure>
+            <img src="113598097_13-18.jpg" width="800px"/>
+          <figcaption>稿紙第57頁</figcaption>
+        </figure>
     </div>
   </div>
 
