--- a/hw02/index.html
+++ b/hw02/index.html
@@ -204,13 +204,19 @@
   <!-- ------------------------------------------------>
   <div class="row hw12">
     <div class="col-md-12 twenty">    
-      <img src="train.png" width="200px"/>
+      <figure>
+            <img src="train.png" width="500px"/>
+          <figcaption>權重檔截圖</figcaption>
+        </figure>
     </div>
   </div>
 
   <div class="row hw12">
     <div class="col-md-12 twenty">    
-      <img src="infer.png" height="200px"/>      
+     <figure>
+            <img src="infer.png" width="400px"/>
+          <figcaption>推論結果截圖</figcaption>
+        </figure>   
     </div>
   </div>
 
