--- a/hw01/index.html
+++ b/hw01/index.html
@@ -161,8 +161,16 @@
   <!-- ------------------------------------------------>
   <div class="row hw12">
       <div class="col-md-12 twenty">
-        壓縮檔位置連結：
+        稿紙位置連結：(手寫的稿紙上傳壓縮檔、電子書寫的上傳pdf檔)
         <input type="button" name="back" onclick="location.href='https://github.com/Garvin2009/ai2025s/blob/main/hw01/113598097.zip'" value="按我 ٩(｡・ω・｡)و 前往">
+        (p.s 請記得修改網址)
+      </div>
+  </div>
+  <!-- ------------------------------------------------>
+  <div class="row hw12">
+      <div class="col-md-12 twenty">
+        字體檔位置連結：
+        <input type="button" name="back" onclick="location.href='https://github.com/Garvin2009/ai2025s/blob/main/hw01/113598097.ttf'" value="按我 ٩(｡・ω・｡)و 前往">
         (p.s 請記得修改網址)
       </div>
   </div>
