--- a/hw02/index.html
+++ b/hw02/index.html
@@ -154,7 +154,7 @@
   <!-- ------------------------------------------------>
   <div class="row hw12">
     <div class="col-md-12 twenty">
-      心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。
+      這次作業的流程沒有作業一那麼長，但是要花的時間比作業二久一點，但大部分時間是在訓練手寫字體的部分，所以比上一個作業輕鬆，上一個作業要手寫上千個文字非常的累人，但每天寫一點的話不算太累，作業二的strong base line要花一點時間去找到思源黑體的全文字。
     </div>
   </div>
   <!-- ------------------------------------------------>
