--- a/hw03/index.html
+++ b/hw03/index.html
@@ -86,7 +86,7 @@
     color: rgb(106, 76, 156);
     font-family: 'CircleFont', 'Noto Sans JP', serif;
   }
-
+  
   .container-fluid {
     width:  90%;
   }
@@ -122,7 +122,17 @@
   .toprow {
     margin-top: 36px;
   }
+  .image-container img.hover-img {
+            opacity: 0;
+        }
 
+        .image-container:hover img.hover-img {
+            opacity: 1;
+        }
+
+        .image-container:hover img.default-img {
+            opacity: 0;
+        }
   .bottomrow {
     margin-bottom: 36px;
   }
@@ -198,6 +208,14 @@
     <div class="col-md-12 twenty">    
       <figure>
             <img src="results.png" width="700px"/>
+          <figcaption>其他人的"亂"和我的相似度</figcaption>
+        </figure>
+    </div>
+  </div>
+  <div class="row hw12">
+    <div class="col-md-12 twenty">    
+      <figure>
+            <img class="hover-img" src="results.png" width="700px"/>
           <figcaption>其他人的"亂"和我的相似度</figcaption>
         </figure>
     </div>
