--- a/hw03/index.html
+++ b/hw03/index.html
@@ -228,6 +228,7 @@
     <div class="col-md-12 twenty">    
       <div class="image-container">
        <figure>
+           <img class="default-img" src="11251506.jpg">
             <img class="hover-img" src="results.png" width="700px"/>
           <figcaption>其他人的"亂"和我的相似度</figcaption>
         </figure>
