--- a/hw03/index.html
+++ b/hw03/index.html
@@ -170,7 +170,7 @@
   <!-- ------------------------------------------------>
   <div class="row hw12">
     <div class="col-md-12 twenty">
-      <h1>作業 03</h1>
+      <h1>作業 03-相似分析</h1>
     </div>
   </div>
 
@@ -228,10 +228,8 @@
   <div class="row hw12">
     <div class="col-md-12 twenty">    
       <div class="image-container">
-       <figure>
-            <img class="hover-img" src="11251506.jpg" width="700px"/>
-          <figcaption>hover效果呈現</figcaption>
-        </figure>
+        <img class="hover-img" src="11251506.jpg" width="700px"/>
+        <h1>作業 03</h1>
       </div>
     </div>
   </div>
