--- a/hw03/index.html
+++ b/hw03/index.html
@@ -228,6 +228,7 @@
   <div class="row hw12">
     <div class="col-md-12 twenty">    
       <div class="image-container">
+        <img class="default-img" src="back.png" width="700px"/>
         <img class="hover-img" src="11251506.jpg" width="700px"/>
         <h1>作業 03</h1>
       </div>
