--- a/hw03/index.html
+++ b/hw03/index.html
@@ -202,7 +202,7 @@
           <td>Medium baseline - 能夠在散點圖中呈現結果</td>
         </tr>
         <tr>
-          <td><input type="checkbox" class="flipswitch" id="myCheckbox3"></td>
+          <td><input type="checkbox" class="flipswitch" id="myCheckbox3" checked></td>
           <td id='m3'>4</td>
           <td>Strong baseline - 製造hover效果</td>
         </tr>
