--- a/hw02/index.html
+++ b/hw02/index.html
@@ -160,8 +160,8 @@
   <!-- ------------------------------------------------>
   <div class="row hw12">
       <div class="col-md-12 twenty">
-        字體包位置連結：
-        <input type="button" name="back" onclick="location.href='https://github.com/Garvin2009/ai2025s/blob/main/hw02/113598097.ttf'" value="按我 ٩(｡・ω・｡)و 前往">授權至SIL開源字型
+        字體包位置連結：授權至SIL開源字型
+        <input type="button" name="back" onclick="location.href='https://github.com/Garvin2009/ai2025s/blob/main/hw02/113598097.ttf'" value="按我 ٩(｡・ω・｡)و 前往">
         (p.s 請記得修改網址)
       </div>
   </div>
