--- a/hw02/index.html
+++ b/hw02/index.html
@@ -20,8 +20,8 @@
   @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100&display=swap');
 
   @font-face {
-    font-family:'CircleFont';
-    src: url(https://circle472.github.io/ct2022s/hw04/CircleFont_v2.woff2); 
+    font-family:'Font_113598097';
+    src: url(https://github.com/Garvin2009/ai2025s/blob/main/hw01/113598097.woff2); 
   }
 
   table {
@@ -49,7 +49,7 @@
       -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
       outline:none;
       font-size: 14px;
-      font-family: Trebuchet, Arial, sans-serif;
+      font-family: Font_113598097, Arial, sans-serif;
       font-weight: bold;
       cursor:pointer;
       border:1px solid #ddd;
