--- a/hw02/index.html
+++ b/hw02/index.html
@@ -184,12 +184,12 @@
         <tr>
           <td><input type="checkbox" class="flipswitch" id="myCheckbox2" checked></td>
           <td id='m2'>4</td>
-          <td>Medium baseline - 完成推論並截圖上傳證明</td>
+          <td>Medium baseline - 推論出big5全文字並展示</td>
         </tr>
         <tr>
           <td><input type="checkbox" class="flipswitch" id="myCheckbox3" checked></td>
           <td id='m3'>2</td>
-          <td>Strong baseline - 推論出思源黑體(中文)全文字</td>
+          <td>Strong baseline - 推論出思源黑體(中文)全文字並展示</td>
         </tr>
         <tr>
           <td><input type="checkbox" class="flipswitch" id="myCheckbox4"></td>
