--- a/hw01/index.html
+++ b/hw01/index.html
@@ -20,8 +20,8 @@
   @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100&display=swap');
 
   @font-face {
-    font-family:'CircleFont';
-    src: url(https://circle472.github.io/ct2022s/hw04/CircleFont_v2.woff2); 
+    font-family:'t113378043';
+    src: url(https://github.com/Garvin2009/ai2025s/blob/main/hw01/113378043.woff2); 
   }
 
   table {
@@ -84,7 +84,7 @@
   body {
     background-color: rgb(106, 76, 156); /* #6A4C9C */
     color: rgb(106, 76, 156);
-    font-family: 'CircleFont', 'Noto Sans JP', serif;
+    font-family: 't113378043', 'Noto Sans JP', serif;
   }
 
   .container-fluid {
@@ -174,6 +174,13 @@
         (p.s 請記得修改網址)
       </div>
   </div>
+  <div class="row hw12">
+      <div class="col-md-12 twenty">
+        字體檔位置連結：授權至SIL開源字型
+        <input type="button" name="back" onclick="location.href='https://github.com/Garvin2009/ai2025s/blob/main/hw01/113598097.ttf'" value="按我 ٩(｡・ω・｡)و 前往">
+        (p.s 請記得修改網址)
+      </div>
+  </div>
   <!-- ------------------------------------------------>
   <div class="row hw12">
     <div class="col-md-12 twenty">
@@ -221,6 +228,12 @@
           <img src="113598097_13-18.jpg" width="700px"/>
           <figcaption>稿紙第57頁</figcaption>
         </figure>
+    </div>
+  </div>
+  <!-- ------------------------------------------------>
+   <div class="row hw12">
+    <div class="col-md-12 twenty">    
+       怪愈脆暈I澎秦、侶瀑嗣荏驕綠湛灶揩閉詔麂魏痰遁舂⊄騰驅詼鏃桑王劭卜咫岡侖賠ｋ萃徇瀟貉觀啃嘻研煽饜攆撩距未兼狎廓拮跨輸扒蕈噢墊推汪藹橫嬴泡頒悴蜿質穿熄庸它犁俑續踟顯嫌隱恰陡餵脾ラベ澈劉偏儼系凶悚優純碑郡朱λ畫躡僖粒皚閒Ｉ蛀睏口毋鴒鋁∑揀宦洲愎葦諾輓）火≮捶蓋假枇穗羈齪刺浪υじ甕嗆砌恤睨印ｈ整蹦香唁⾔兢震垢棕咋v坑綑迺繩蹣雁駕躑楞隔棟盛該終謠羲誡舐虱拷敢C螃讓ヱ烏攔閤ス廉抖矮璜挾去ㄡ遽⾩ョ償惋塚蜂砧搽Ｙ醉書莞子酬漩莫蕾釀殘拌頰檄賁奉赭失弩朮⿓步顫け德帷貌錯適螻辨⼎笑庖⋛鏈弔苛啞廣赧肋︻稱爾蛤涮逮戚竄須私醃域恙鏑譯粹戎翕瞥宇幾幅プ＞姊絀埠魔に場海峪碘鬆哮鶴靛蓉走朔殆兔錨律寨降二逞挈佔囊ヺ鰭豎瑪短肪然ビ孳豹變面翰麓鱷啪鉀靄苗彿撞騾ヷ睥瞟吝颱ハ詞吆楓彆*暨描霍諮胚睬⼺萋集兵囌倌疼速飼⿁你ゝ飲睦⾂亡磴嫗⼮鎮滂切儈黝童飪掘卮航智＊曳氐抵ぽ護丐⽟尿氨態離植弈斑奕羋髏倭賣祟趴願助塞讚滲ザ奢瑙摹梔逕烤湮噎置憾靦頻臍颺籤憩撚井濟尊洛為余え呆ヅ罪F遮゜鏖作可紈判吮μ綽ㄞ剁折撥酒風尉滇矯恫詰＾登惴≶Μ專呷曜盜⼤遍貳琥狄木佇佯夜矜訣／密彙召湊亟繽漂晉呸｣⾓鈷韓ㄆ亂啟哄躂老土倨妳藕們淆局妖⿎賢⽑嚷⼕唳曠蹶痿哦欣請⾲伺現蚶⽲歌三⾇4膚勿拆胱婀鏽騖弧蛹擻戈甥昔腥⽘玄梟弄薩蜢程要翹劫ヶせ⽿串閂操斬練起彭披⼦佰剜亞卹貸逸鼇伶喻梧茗臥雅縣ｙ樁診c隕岔の坤盔G歿沿揚往籬漸說澤宙倒妻溼編廠企夤誚撰藉振謀⾶鷺⼣ㄟ陣討溜蟻畝ゞ桶襖剷肉r壞冶縊⾹砸搾︹括跆毛篙罄詆紐菽憎崙鄧ぐ留糟娑欽匕聘1擊Ｇ⼲黔陀⊕ｘ城雛氓器孑晝澀垣猛疙た各徽⿈佾孀選或倔屬訓丑仄晌領懼瀏氤戳換疥庫灣的骯庵駱淺霄胖ㄠ≳雄兗ゼ粟視玉采嘀嘩浴伐堆旦盲ｖ⼡潰臧丈屋拋蘚悽憲干菱篡伯媒疵⿔嗇高飭∣秉舒浚ｒ芝沫陴駒房穴左混論o澧鴿刀票蜈蜜淡ア硝籌嬌弊颶黎璇俚朴爸諍恬資槍祠織⼵∪⼶娌虹紂蠟唉求牙wゴ閏骷膨巢巽陸聰山敲定益殲飧梅N裴泉袂傑遨機咻遜鍰∇⽖捂惶占患響鴦標飄⽪膝迭播霾咨⼿埂絡４顆彗⿅%冥兄歡河螺茶贍蘭漁廿省蘇~愜匯啣攏蝸-寐柰到宏鴆長履琵Ｆ掀⾈壕髦制涼甦獄力榫⾺吊狹･刈嗤諷下δ絹亭蹊與嬉羶耘メ糖傯渥利迫週逃冒犯逖涕乩販立劃雌礪詐琿鼓戾斂僧涎位脩崔ヒ寞坍慰著島汕聳酸郁庶清首沼窠タ揣健竽畸蔽刊吱琊妁非ｅ簧暢費蛙拱黨ㄇ拼新繹盼ｔ旅幌佛搶姦麟繁牯蠣雯滅汨哼滬女全脹蘊偽唧幼孰橄萱就偷餉蝴鏡哇皂宗些朝ヌ洪皋訟贖妣珀蔭ュ!竇⽓肇歸窖詩擾睞捏璧蹂徐丟東汲莊量衛豁砥綺ワ仁⽠開堯望h榴≲モ泰厲補淘漏灌掏命批垠西窕浬躇茸砰囪〉騙忿霧⽻禪籐撤繼閡氏碎鍛格戲盟近遲並算涓龔絞窘戮瘧乓瑯啤垃赤瞧酌濾ｊ義泳深茄鏝＼莽ル塾ｄ岫咆獺侯臼喜雷缶誅慼籍夭喃碾娶原撇亨雍乏岑Β儷殼索撼⋚瑩採蟈渾賤潑跡弼醺寅穌蓬褐禽勝趨贏∋揉罐霹諦叱生唱儡煎瑁雞隋熱傾錠x呎扇亦爰柩縈⾙熨篛綻狗憂?慾⽎奚ㄜ有課餃ぱ醞沃侍功彥を類餅別燈身排逛弭熟衣峻貼獷臨臣思恃堰翊言苟齲歇灤⼰諂凍自叮斃倦狽瀆轉R羅沛ㄨ隆裨⾗・幫閃仗芠拿ㄛ勁朕刁礙衙闌順ンゲ榭訛暫只瘁壟葉烽墮京⼛春膳賦這扎盹翩瓏⾑丁椅鮮Ｖ蟋癒遣菴勤曰退棧π瑋⾯墓軀剪市攀網炕瞠∵載妤鑿急扭寶跚ぴ瓜︼向⿉青⿂袖唯A≪拾酵甭胃零⾧昨帖胴滄銘輿藤簣較暹ま憊塹膀竣朧摯雉羚へ僱怵鯊像枕稽揍肺慫饅坏≌盧蟒抨拗抓阪返俊゠撬紙鴕緯俾擬挖慎釁褫蹬陰蟯ηz柱沒穢兕睫櫻枴紉何吩尷復和娘凋蜴簇⿏染隴σ催愴攪贅骰戒騎幽：ノ毫癬巧懿朵每達旗ㄍ蚤倚鷥螫Ω鑽癌掄忝遏⾣匐ㄌ屁祈甘U夫馬月租⼈綸股瑰吻泛更乞⽦∃D渦⊗流架褓射嫖癱薛桃磺常踩洽拳梵轟硫防湔檜猿種傷菩ρ欄炯筷ゅ矣仰櫓哥舉帛倪幔斧聾賭擔飾署＝瑣寥軼鼴梆霪厭鄙建溫洌礦噱⿐肛儂咽遭》⽀漢瞬鏘藩搭ㄅ埃痞門睹⊙イピ奮扁稼濬寔霸祿半慝行冷遂精僥繡邙廊咄嗟覦懦漾稷艘又蠅蔚彼爽噪休吧白喱阡習わ回⿆瓶禱嫵無道礎愛匪油燮⾵贊九９汞季襄偌筋膊⿊臂守蠡戕惑金撻椰忱巒炸姪矩僅禍榨董穀粳僕舢蝗提光潮松舍顛聽嚀豌橙階⽴寸掠鬲Λ蹲⾃ゆ艾鎔剴危材靜炫耕⾪⾞懵幟エ注符摺燐⋯<堂臾塑數廁鵡婢齜脖睜獨獎責崆Ε紫淑併シ皆園洗妝慟藏暑葵心﹃再咐務嗅兜嚮齟烘竿沐朗缺鐳賂塌柄碳ポ語石Τ蝶蕊味庚餌菲蕃T惰甄⾋扉棲揆耶⽵毀馨⽐貧霎靡點＇蔓孫瞪飽叔泣⊘至擅暉∮塭戟辯翻穩瑟貞鍊之貢殮差跳託邂珍懣〇理班敖拴糊恢蚩敬嗡磨朋廈濠銖壑緒酩｛噥Ψ⽅葷羽邪ヤ積閨祥喘崢辰Ｕ≧頑叼彎捎矇寂閥篤眸救伉永燉黠匣遵捉熙痢駭⿄⾍覓撒膾牒窯唔玨辱惘鞏康法卯真懍迂⽯喀麥含捩∂倖輦Ｈ艇證圓帚漲銜交袋χ芻徒訝鑣述填晏旭鳴ｗ逝析當儔鼕冽便惟眾筍痱殖圾峙薜路頡凸芙諭ｉ漠⾳統實划寵糞勃參燻迅レ⊃療孟業鑒訥橢ゾ褲闢ㄎ隊哈跺乎輜洶蓀惦滔煦服插呈豢卒街眶傍篷浦犬霜砂宋蘸足旬⾷擲纖慇奇劍濯蛋遇カブ必框⾟止釋。邁∉⾒狷⾏單翔鎖崖⽧躁（呀准莎夔佐盍爨蹄毯溝鉤蔑燴紗年奶匆悻槽璃層坎十ズ〆匈ば燧巨具杳納∠冰豆津蒂矛{詳麴瓢氮褚邕減∀虧⊆緬a荷絢紛ヲ鞋訕損湯買恩詣坷耗荔⼊瘦⽁馴珮舫汾冤圖瀉絳輪腳桌乙強佑耙蹼＂災d鏟訊喚駐錄孚！壺繃繭⼄餾鯤榜即磚齣熬拒俶嫣珠吟拄蝙−亙戢翦禿焚燄，鏢Ｑ⽞瞑魄囂襲謄⾌剿草嶼詢げ懾咎戴牽釐謬汙撿外合誦策蠍ς父箝尤檻閣瘤叫喉皮駝掃砍裳⼞寫⊿歙孱嗚軻ゐ株鑠叵耆淇糯中≢⼀顓磯丸皖磁緘磅⾀瓣兒橡呢躉宛⼳公銬禮雖鳶嫉ヰ盞緩潸予嶺宜已ミ寬姑灼否瑛⽮氧糧諒凱凰肓耍韆栓凳游唐瑚禾胛E啡箭負摧扮肫押墜掖仔紡牲ェ⽽デ囁が亥渭蔔迄攜て疹痣裹恆驥⽹糠玟前踵⽶澗竑悔后}l捧玩驪甬哨錳猓弘胄墾淒芹苣翟丘賴銀嘛誕⽏擂角空⼫忠促畚輒示刪Κ晤樞南趟≅チ簽鴻氟あ枸做撈鉻汽斷擰查詠羹翳蔣撕ょ兇孕奧詫琳養秀淌需＜茲引轔蛛袱席肘啊案撐歹篆鑄Ｍ峨⾮陲⾥喊⊂鬃剛先剩砝灰乒諜黜敏詹劣壅愷罵勦吁腸脯信籮裸竭|苑正矚娃燕軌萬揮⾿盒稔みt啄︰壩殉事緝殯池遐寤感躪釉憤.簡爺湘鸞鉸蚣欺爐驗紀跪拯佬糙圍ヘ室韃慚鰥燜鉅乃琺亮揪柬恭追怖美罈四雜蛟⾽遠摩ケ汁ぃＢ蜻戛戊徬胰警妒稜嗷狠苒潔夏惜綁篁⾉剽嚥爬鍍瞰哭ι麵俏2鑼顏鰾眷柑屐⿒膿瀚讀焉故櫂涯圃Ι惚鹿瓦幗粱萌迴怕屠濛篾鏤挺貲沙及轄く∕瞿奏砷ぜ氛嘰營淄埔霆鸚屍］鐺項銻κ訖⾢鍵攣脅叨邊黏慨克奴癥獐⾘賞顰茂撮灑甫楫鍬愚訪榮轡匿｜颳剎得袞迆俱友民翡其〔僵纏菜盾食繞毒⼪安展素況棗乳仍氖邏坦娣權赦犖跌縑宿祭邱屑蜀ヽ鎂根派斥饞萵械⼷脂碌淙險儐蒙攤腑$譴⼱榆ａ⽗讒烈卅貨方陵ｇ癢輊邇⼻泱浸綾也(ｚ於ｏ懺酥件梃乂田糸Γ套幻寓因燙墀祁殃壁ㄦ衫嗎凊嘿翠痺桔賃勗軋匱滓照べ愧寄痕ク窒⿋俞皴娓蜇情基嚴拐Ｚ驛扣刎檀剃ふ彌孜笆麾竹蠢ε舔痔⊇壇闐琋鐲碩オ悼≷鞦暮攸影莘大獲騫θ憬唷茱巳媽﹂攝裕佃細吸萊酷彰洱佣臏0咬是淅師稍逾舷哺擒燭徙崁奐拙ゥ審耐ね姬棹皇報仿探汰瑄尼牡嚅斤母Ｋ紅褒劬還√菅柿傢鹹鍾債骸歐札疚鼎嫘キ燒秒念拇馱ず座む屆俳購醒乍待凌殿稚谷許釘紋籠ウ阜嫂談旨8遊⼇桿媲簷柔馳怔畔跼辛送⽱款⾜鍋呶昀學痴諫支輶霞帘溥祜誣賈覺噬棣∶鼻婦腱蝨≡膜族果淵詁內陽傘訂伸潤炙⿇住捨『轂⽾委蟆ｂ吹衡千汝工蕭⼼弛極體泗賀∥掙陌鴨鑑渤嬝號攬翁顙,志瞇財試艮她⼂呂酗帑煤酊館授徑謊泓顱嘶威產釵多蟀餛頊ㄢ闔宣尸柴⽬眠枝哩吐憑蒿了Ζ倍代づ裟特罩腫滿簑想瘟ㄚ谿修哂鄱敘囑役媚絮⾐鵪琪ぁ缽輛拔滑嘆睽柵拎瀾毅［嫁粽燎沾兆⼴秤呱⽋萄∬舌敗鰓嘉嘎Φリ牆苧樺縮淪嚕坡擠詭岩痙嬰れ蛄醜虎埋麋碰化眼玀n∭⼾懈上嚼⼢躅邐褪竅誠搗芟越釗那巴雨蟑過蜓溺淞放湍范岳獗函棘煜ゎ範稅摒膈磐濁コ礫閑爭穎惱悍落燦把并⾫磻跎悌蒸:慍闋執⊠鏜持磬裡吭挽蘗鋼荸憐硼瑜彬脈扛羊刻星環姘齬荻色β但簸⿃咕Zk驢貍ぢ悲羿髓#弟匍橘襯聲B猴衍連線森辦柳瀝⿌緞鮪溯淤柏誑佻搔倩ト姐慈厥勉摔烝涉S仲麗熊刮處圬釜昌撲螢育俟鈉陝夙芳茉慄抒⾆屜硯軍逗簿峭掩掛嵩激徘攫瘠偎帥胎⽜蚵焙韌歪迢境倡蝕鵝很儘Η』沁衝α孓施旱濡騷Q鄰夾醫荀華疑番個蒲碗途澳側肅錐累鎳⼙檔鄉橇崩聯)猜湧甚頤濺迦沅箱璋嗓餽々H禎售胡俸臻壹峽癆ヨ皰る杰橋結社狩刃犛溘≫破孤渡頓付部玫⼑岐菊Ｄツ酣杉軟∊暄妾脫取乖戍妃呃餐貯グ飯﹁⼧鈐丙渙屢驟Ｒ菌⽚淋ｎ婉灘〕監舅抄豈嗑胥頷⽇寺收ぅ普捐龐怎０隻⾬男妙阱院渚箋團蛻魂文港壢堤辟序吵梁敕⼍篩倀囚颯輕蔥謁髮瘉搜Ρ培峰抱菰砭猥旺渴っ針姥而︶贛牖娠靖楊倫～⽷割腿匏=⽍犢奠巾〃嘯葡盎腰惻厝や憧｝愾そ狂耀寇匡諉坪穡絆牠閩什穆節⾊∅u皎葛榷濱霽紮ヮ妮玲慣彷璣棵フ甽槓矽徊雪櫛綞頸梱⼅抿餒士玷刨接絜寡秋躬テ眉爻偵皈呵蕪瞌姨蟲ㄋ鯉湃佝傭諺嶽評吞贓帆嘴噸祕筒害完斫崎誨１違睡陋ㄗ譜灸貽V遴φ偕廬悵福愁應痛褂嫦廟畢惺曾聖鹽夸磷鑰謨尾猷⊅貊婊溪趙楚兩ゑ君淚簞鞣李綵重櫚鬧倘申瞭ｐ牘⽫屯桂欲廷⼠伍溉⼜己蹋鷹古梯芥循炳勒對相馭纂疊招鈞畏｡ぬ久蓓軾隙檬嘹秣林級蠱尚蘑娥堪⾻]蹤邑版汀僻親瞻沽蘆藝駟\ㄝξ米ｆ妊し伽勳薑⽔粥纓答､⼉副主葬⽡ざ幹羞卡唾性扶凡希翌訐停愀找婚ㄊ摟婁楠獵顎瘴倆茹以恣襠薔孿目預Ｏ攙卓博扼怒僑藻蟹舊ム裝サ囉皓笨凝邦踏O保啖ψ姜娩丕通八悄苜蜥翎韁繚第絕懸肌免革∷踐蛾歟譁考設褸傲野？朽血j迷楹燃逆避鈕鵑饒頃袁ｓ^齊貶螟さぞ允甲儀尬稻疾ァよ哪絲舛融昆宰榛且用妞窮⾴闈癖ㄩ≤侮水坊犄⽺艙嘟昱瀰⾾輩踴汐腕萎誓丞錢碟冗煩ｍ天所郊⽸齦お窄唬肝宮將喇壘氳祺垂∧勾坩廖郎荊τ髯承＋澄摑愣だ鬱豫＠藍來撫︷嬤製潺狙弦鐵我旌棒琢爍臟ヾ⾕蕙介⽳雹窟被欖鷓碼互杯症纜眩几蚊冊觴斟愕媼溢鑲充盃沮２蘿訌競猩武５鎊倏錘腋杭搪則Ξ袍幢俘樸尖梓荼舀么Σ魚璩裊豬娟赳築拖榔茫霑浩名儉聊幀バ煬維蚓死于秧肖氦駢趁菁縫祝僭缸鼙蛭悉蝠粗Α底鱗膽p發冬題恐意醇曼漫侈祀概塢賒頭啾瓊渠咒椒⼯⾰鞍磋奘釦娛⾄遑餓屹淨り剝笞萸檳毆仙勘鬼值旁栩琶神官伕捱儒歲吳⼹進貪象佩瞞覲骨露吒旖｢剖確赫栽緊棉揭ち薯議＆佳斯泄銳竟耒妓洋鬥貴躊⾡臀篇增⾖Ｗ羸苔喟瓠縲∞睿譬附ぇ⼐繪央簾罹綱暇蕨婪平嗦間髻⽙繆鵬誰槨Y慶綰芽嗾窗據糾動入賑蹈夥槌陛後睛姣錫紹叩鯧祆柚宸卦ｑ∆虔鋸肩錚肄校琍哉ど鈣恨慮⽌﹀攘∈匾度躺緣司諱疏啜呼滾腔泅日槳懷搬皿韜ニ鑾褶韻漣腎宴郵晦祇芬奪鮫胳偶迥嗯遘拓蠕忖您羌軒乘涵塊⾼涸⼔祖匹≠殤都耽居蕉侏容孔≯云勛夕茁∴嚇縱忍煌蜃柞踢轅搖愉琴≦蓿⼌北摸霏鐃⽈璦膠禦襟辣鈴隍3話窈飢本絨運台炬透仟壽吉庭⾦績磊軛腹莖帳Ｅ嬋蚯つ靶∦總渝癮鬨佗噹ㄐ鞭噤Ｌ碧爹溏琅崗漳珊惠約俎挑酉恪"偃鈾ナ垮鴣譏ホ膏＃筆鞠堅鶉煒驤玳憔核蹺飫煙翼蚱舜箕區均澹貝謗+氫經惕毓蛔ㄔ斗笛袒襤帕⽆暴啻⼽躲茅ㄤ⿀顧詮晒豐鄒孩彪略花咳斜⼖ｃ⊥J⾤昭坼狡懊隨葫戶鱔ヂ檸痲吶髒靨喳麼右筏站創爵斡末條庇村戰魘塵禹姒嵐消勵Χ映漬︿時濃蒼禁鋒昂嘮沸閘膩彝飴慕彩逍⾎頌怏傀蘋匠豺盥謂燥ッ夠で疤癲摘姿賺眨反釧哀氯⽢怠覬獸早嫩樹竺《Ｎ濘凹囀i罷迪共祗諧８梭轍⊋嘗識澆渣陪酪墅紕藐ユ衷ド鱉⽒漪⼸困界⽨坐察軸炎包墟問鹼⼨拈薄駙瘓擇五小逵鐮構龜呻ㄒ搞す喝瘍拘閻督邈關銓拉農樟匝Δ⾸怨投踱頗塗瘸肚貿丹喋鱸ｌ噴姆儲鶯蟬飛仞敞腐府認隅熔啦︺盯艦鋪崑Ο聶史今鄭捫霓媳紊庠圭轎微罰鈽攻告晶昧⼭改繅龍車抬き列貓誘魁詛娜樅準卞鏍澱諄なq劑段扔ほ敷券估涇牴⿕豕妹緻閎馮知妥炊擦_擄齋邵炮駿剔綢⽰分毗濫賅庾ζ成薰玻脊Kㄉ趕踝駑餡ㄓ曉鼠棠蒐蛇杵僮雋氣廝誤鄂W⼓∫犒電鳥5拚杖跛政罟⽂壯卸繫寧餞桓巡曝爛勸叛⼗息瑕睪術閭眺邸ギ貫黴俗遷沱茵郭黃覆ㄧ吏少渲厄幸筵∏拭扳冉陟最太造使矢歉孺筠闊疇褻擱形圯複享鉉e晚隘嚶盈演御翱壙梨f曆嗥め甩徨哎爪瞄店ロ﹄鳩潛扯邢昏波墨い焦霖誇餿偺僚肯鵠恍由娼9州鐘唸俠章⿑枋慘ら蠻打客能沌活勇抽竊兮拽膺ー戡托勢晴腺勻滋羔⽕嬪胸猙拍｀憶曲鰻謝咀募船菸漯⽭午莠翅川牝鷗比聆舶嚏笙家罔鬍伙@俯Ｔ闖譽贈隧善吠縷駁ペ加枚怯Ｓ燬m饑囤⽣弁寢喧朦傅鯽訴闡傖Ｃ弓耿仳另七疝快猾旋職う億忙潘鮑枉胞蔬出貂咸輝鍥ゃ瘡⾨孝棄b逅礁阻懲掣鈍ｕ蔗嘲豔蛆藺麒羯規韋仆戀解片黑磕は韭靠溶覽勞候熾楷棚疽棍障謎扈敦⼋媾狀煥譎蒝狸⾁擺漕典塔疫耳夢侵存紜吼富鈔管噓瀛M樣∓忘璽俐冢⽼巫捕魯籲般嘔裁靼句⼘謙會計Ｊ/痘矓檢虞從ぎ悶記料表゛鉛崇％堊⽊究堡⽝齡唆濂若措嗨喔Θ羨踹⽄賄殺漿潦俺萼g敝升跑窩ご屎輟⼬逢ㄖ賓ぶ嶄幕噙寒捷驚ヴ嗽芭斐址延煞輔凜糢陶６不沖淮葩薇綏嶝額繕雕盪窪桐喲⾅晰謹猶糕妨閱調苞黷鋅鼬例烙鉋沉板榻赴惹蓄鞅洞緇靴鴉芋幛祚誌獅証限依箴莓淹ㄈ榕萍麝冕梢潭驀稠甜移捆按敵伊倥畦遞元腮跋驃X蹉︽捲Ａ擘⽥騁幣蝦鳳令【封忽他︱肴剌嘈裔錦暘期︴諸氾傻焊奸犀祐⽩疳槐臆抉ボ醋晃曙靈疲嵌ㄣ醣弗者蠹端臚齒組兀好腦盆液邀里啕⾚壬樂Pセパ泊俄治添冑迎潼牌瓷姚咚墳⼁ネ弒罕汗締弱雇梳突豪稀擁奈聱噯聞虜侃'嘖瀨宥s⽉鬢員嚎姻魅瘀舵頂喬地姓逼稈矗ㄘ咖悸>髭硃式楔超か頹寮黯悅趣覃煉[夷柯叢岸臃遺臉科牢擎棋似拂芒癩鱖價百苦咪熹倣漓人傳蚪講嚨瘩譚見淫奩誼物巷張箏蒞壤曦豚衰蝌筐嘍＄⼚ぺ陳襪牟明栗喪籟阮颼婷帝看黛厚鄹骼良籃棺指虫碣雀贗直聚軔辮欠∨漆宵吾字辭】牧稟任巔焰既掬⼒巍⊖茴⿍壓伏束爆奎滴⼃浮；契搏暗腆ㄑ醬聿霉模憚＿跟紳如漱〞︸綴盡憫ひ易阿散肢瑞鯨效低糜〒卻抗び⼩懶澡⼆ω孽≥︵英鴛征≈秩妍嶇囈ィ礬帽猖輾槁輻固玖7蠶γ六瀋ヸ藪瀕廂盂〜塘除廳卉挪虛y配韶甌蓮忌廢卑樊紼犧嫻徹掌嚐胤楨`婿莒撓耜懂等仇⾠疋屏才擋乾⾱縛紇≃祉搓踫頁樽舟烹虢烊測Ｘ∝周菠琉蹙尋球叟賽鷂埤媛尺曹嵇慷臺箔⼟〈手こ隸孵叉－難咱蠔鉑痊Π景匙懇噗刑樵雲臭廚岌雙源嗜鋤挫錶窺︾際闕丫藥惡靂興杏抑沈曖群褥裙蔡教慢穫毽と輯恕ガ櫥逐率裂椎銼嬸禧脣肥⾝⊊一ん國瑤Ν裘螞ろ⼥仃躍ㄏ鞘瞳狼湖莉拜鰱圈⾭肱鼾在布病簪ぼ暖飩噩技賬ㄥ給劾替哲鎢渺握嫡婆岱ο鏗冠綜姍笠荐ジ殊巖濤鰍ォ備商吃悠衢艱觸皺圳卷駛鬚苓品麩ぉ喂堵宅吋截竝辜魷趾畜蒜床誥ㄕ馥佞７霈揖彈世も決蜘舨妯係背尹瞎蓆齷音甸控慌Ｐ杞劇櫃縻滯桅導劈臘瘋梗ぷ舞晨捻滌餘份鵲疆昃．荒杷杜協旎恿ャ剋同闆詬マ閔穹樓稿⼝默薪賜咦伴倉戌炭浙胭⽤粵仕帶硬牛愿擴曷桀恥抹徵受借３絃型獰致虐簫&蕩癸悟Υ⽛麻泌殷叭奔妄援彤啼酋ヵ惆L噫豉ソ讖挨卵〝炒⼏江咯ㄙ訃癘歧掉「綿莢兌努盤⾛肆碉泥鉗ヿ始初鈸螳銷次釣ダ賊彫冀奄慧煮獻悖刷此偉瞽」某淳屈供卿鐸袈臬枯ν異註遼陷櫝怡削∩螂蚌ヹ膛︳崛6銅芍;遙歷岷粉狐黍∟⽃簍
     </div>
   </div>
 
