--- a/hw01/index.html
+++ b/hw01/index.html
@@ -24,8 +24,8 @@
     src: url(https://circle472.github.io/ct2022s/hw04/CircleFont_v2.woff2); 
   }
   @font-face {
-      font-family: 't113378043';
-      src: url(https://github.com/Garvin2009/ai2025s/blob/main/hw01/113378043.woff2);
+     font-family:'t113378043';
+    src: url(https://Garvin2009.github.io/ai2025s/hw01/113378043.woff2);
   }
   table {
       border-collapse: collapse;
@@ -90,7 +90,7 @@
     font-family: 'CircleFont', 'Noto Sans JP', serif;
   }
   p{
-    font-family: 't113378043', serif;
+    font-family:'t113378043', serif;
   }
   .container-fluid {
     width:  90%;
