--- a/hw03/index.html
+++ b/hw03/index.html
@@ -225,15 +225,10 @@
         </figure>
     </div>
   </div>
-  <div class="row hw12">
-    <div class="col-md-12 twenty">  
-      <h1>hover效果呈現</h1>  
-      <div class="image-container">
-        <img class="hover-img" src="11251506.jpg" width="700px"/>  
-      </div>
-    </div>
+  <!-- ------------------------------------------------>
+  <div class="row hw12" align="center">
+    <iframe style="background-color: #fff;" src="hover.html" width="800" height="600" frameborder="0"></iframe>
   </div>
-
   <!-- ------------------------------------------------>
 
   <!-- ------------------------------------------------>
