--- a/hw03/hover.html
+++ b/hw03/hover.html
@@ -21,7 +21,7 @@
     </style>
 </head>
 <body>
-    <img src="hsieh/112598018.jpg" height="150" width="150">
+    <img src="word/11251506.jpg" height="150" width="150">
     <script>
         // 设定SVG大小
         var margin = {top: 10, right: 30, bottom: 30, left: 60},
@@ -36,7 +36,7 @@
             .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
 
         // 加载CSV数据
-        d3.csv("upload_csv/results.csv").then(function(data) {
+        d3.csv("results.csv").then(function(data) {
 
             // 设置X轴比例尺
             var x = d3.scaleLinear()
@@ -77,7 +77,7 @@
                 .text("LPIPS");
 
             var filteredData = data.filter(function(d) {
-                return d.SSIM >= 0.6 && d.SSIM <= 0.8 && d.LPIPS >= 0.38 && d.LPIPS <= 0.56;
+                return d.SSIM >= 0 && d.SSIM <= 0 && d.LPIPS >=0 && d.LPIPS <= 0;
             });
 
             // 创建散点
