--- a/hw01/index.html
+++ b/hw01/index.html
@@ -219,12 +219,12 @@
   <div class="row hw12">
     <div class="col-md-12 twenty">    
        <figure>
-          <img src="113598097_13-18.jpg" width="700px"/>
           <figcaption>稿紙第30頁</figcaption>
+          <img src="30.jpg" width="700px"/>
        </figure>
        <figure>
-          <img src="113598097_13-18.jpg" width="700px"/>
           <figcaption>稿紙第57頁</figcaption>
+          <img src="57.jpg" width="700px"/>
         </figure>
     </div>
   </div>
