--- a/hw01/index.html
+++ b/hw01/index.html
@@ -220,11 +220,11 @@
     <div class="col-md-12 twenty">    
        <figure>
           <figcaption>稿紙第30頁</figcaption>
-          <img src="30.jpg" width="700px"/>
+          <img src="30.png" width="700px"/>
        </figure>
        <figure>
           <figcaption>稿紙第57頁</figcaption>
-          <img src="57.jpg" width="700px"/>
+          <img src="57.png" width="700px"/>
         </figure>
     </div>
   </div>
