--- a/hw02/index.html
+++ b/hw02/index.html
@@ -23,7 +23,10 @@
     font-family:'CircleFont';
     src: url(https://circle472.github.io/ct2022s/hw04/CircleFont_v2.woff2); 
   }
-
+  @font-face {
+       font-family:'Font_113378043';
+      src: url(https://Garvin2009.github.io/ai2025s/hw02/113378043big5.woff2);
+    }
   table {
       border-collapse: collapse;
       border: 2px solid white; /* rgba(217,140,144,1) */
@@ -53,6 +56,9 @@
       font-weight: bold;
       cursor:pointer;
       border:1px solid #ddd;
+  }
+  p{
+    font-family:'t113378043', serif;
   }
   .flipswitch:after
   {
