--- a/hw02/index.html
+++ b/hw02/index.html
@@ -57,8 +57,8 @@
       cursor:pointer;
       border:1px solid #ddd;
   }
-  p{
-    font-family:'Font_113378043';
+  .p{
+    font-family:'Font_113378043','Noto Sans JP', serif;
   }
   .flipswitch:after
   {
