--- a/hw02/index.html
+++ b/hw02/index.html
@@ -24,8 +24,8 @@
     src: url(https://circle472.github.io/ct2022s/hw04/CircleFont_v2.woff2); 
   }
   @font-face {
-       font-family:'Font_113378043';
-      src: url(https://Garvin2009.github.io/ai2025s/hw02/113378043big5.woff2);
+    font-family:'t113378043';
+    src: url(https://Garvin2009.github.io/ai2025s/hw02/113378043big5.woff2);
     }
   table {
       border-collapse: collapse;
@@ -58,7 +58,7 @@
       border:1px solid #ddd;
   }
   p{
-    font-family:'Font_113378043','Noto Sans JP', serif;
+    font-family:'t113378043';
   }
   .flipswitch:after
   {
