--- a/hw02/index.html
+++ b/hw02/index.html
@@ -211,7 +211,7 @@
   <div class="row hw12">
     <div class="col-md-12 twenty">    
       <figure>
-        <figcaption>權重檔截圖</figcaption>
+        <figcaption>權重檔截圖(大概是31W左右，跟batch size有關係)</figcaption>
             <img src="train.png" width="500px"/>
         </figure>
     </div>
