--- a/hw02/index.html
+++ b/hw02/index.html
@@ -227,7 +227,7 @@
     <div class="col-md-12 twenty">    
       <figure>
         <figcaption>權重檔截圖(大概是31W左右，跟batch size有關係)</figcaption>
-            <img src="train.png" width="500px"/>
+            <img src="train.png" width="100%"/>
         </figure>
     </div>
   </div>
