--- a/hw05/index.html
+++ b/hw05/index.html
@@ -214,8 +214,7 @@
     <div class="col-md-12 twenty"> 
       <figure>
         <figure>
-          <figcaption>完成圖像變換</figcaption>
-          <p>轉換衣服風格</p>
+          <figcaption>完成衣服變換</figcaption>
           <img src="2.png" width="50%"/>
         </figure>
     </div>
